--- a/style/style.css
+++ b/style/style.css
@@ -1,28 +1,33 @@
-header{
-    width: 100%;
-    height: 50px;
-    box-shadow: 1px 1px 5px rgb(255, 240, 252) ;
+nav {
     position: fixed;
-    background: white;
-}
-
-#menu
-{
-    width: 450px;
-    padding-top: 10px;
-    margin: auto;
-}
-
-#menu ul a
-{
-    color:aliceblue;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #333;
+    padding: 10px 0;
+  }
+  
+  nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+  }
+  
+  nav ul li {
+    display: inline-block;
+    margin: 0 10px;
+  }
+  
+  nav ul li a {
+    display: block;
+    color: #fff;
+    font-size: 16px;
     text-decoration: none;
-    font: bold 16px verdana;
-    padding: 10px 20px 10px 20px;
-}
-
-#menu ul a:hover
-{
-    color:aqua;
-    background:pink;
-}
+    padding: 10px;
+  }
+  
+  nav ul li a:hover {
+    background-color: #555;
+  }
+  
