--- a/style/style.css
+++ b/style/style.css
@@ -3,7 +3,7 @@ nav {
     top: 0;
     left: 0;
     width: 100%;
-    background-color: #333;
+    background-color: purple;
     padding: 10px 0;
   }
   
@@ -21,7 +21,7 @@ nav {
   
   nav ul li a {
     display: block;
-    color: #fff;
+    color: orange;
     font-size: 16px;
     text-decoration: none;
     padding: 10px;
