--- a/style/style.css
+++ b/style/style.css
@@ -21,13 +21,13 @@ nav {
   
   nav ul li a {
     display: block;
-    color: orange;
+    color: white;
     font-size: 16px;
     text-decoration: none;
     padding: 10px;
   }
   
   nav ul li a:hover {
-    background-color: purple;
+    background-color: black;
   }
   
