--- a/style/style.css
+++ b/style/style.css
@@ -3,7 +3,7 @@ nav {
     top: 0;
     left: 0;
     width: 100%;
-    background-color: purple;
+    background-color: rgb(189, 65, 189);
     padding: 10px 0;
   }
   
@@ -21,13 +21,13 @@ nav {
   
   nav ul li a {
     display: block;
-    color: white;
+    color: rgb(226, 221, 221);
     font-size: 16px;
     text-decoration: none;
     padding: 10px;
   }
   
   nav ul li a:hover {
-    background-color: black;
+    background-color: rgb(77, 76, 76);
   }
   
