--- a/style/style.css
+++ b/style/style.css
@@ -1,33 +1,73 @@
-nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: rgb(189, 65, 189);
-    padding: 10px 0;
-  }
-  
-  nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-  }
-  
-  nav ul li {
-    display: inline-block;
-    margin: 0 10px;
-  }
-  
-  nav ul li a {
-    display: block;
-    color: rgb(226, 221, 221);
-    font-size: 16px;
-    text-decoration: none;
-    padding: 10px;
-  }
-  
-  nav ul li a:hover {
-    background-color: rgb(77, 76, 76);
-  }
-  
+.contenidor
+{
+  width: 100%;
+  display: flex;
+  justify-content: flex;
+  align-items: center;
+  height: 100hv;
+}
+
+.contenidor figure
+{
+  position: relative;
+  height: 250px;
+  width: 350px;
+  overflow: hidden;
+  border-radius: 6px;
+  box-shadow: 0px 15px 25px rgba(0,0,0.50);
+  cursor: pointer;
+}
+
+.contenidor figure img
+{
+  width: 100%;
+  height: 100%;
+  transition: all 500ms ease-out;
+}
+
+.contenidor figure .capa
+{
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(11,103,123,.06);
+  transition: all 500ms ease-out;
+  opacity: 0;
+  visibility: hidden;
+  text-align: center;
+}
+
+.contenidor figure:hover > .capa
+{
+  opacity: 1;
+  visibility: visible;
+}
+
+.contenidor figure:hover > .capa h3
+{
+  margin-top: 70px;
+  margin-bottom: 15px;
+}
+.contenidor figure:hover > img
+{
+  transform: scale(1.3);
+}
+.contenidor figure .capa h3
+{
+  color: #fff;
+  font-weight: 400;
+  margin-bottom: 120px;
+  transition: all 500ms ease-out;
+  margin-top: 30px;
+}
+
+.contenidor figure .capa p
+{
+  color: #fff;
+  font-size: 15px;
+  line-height: 1.5;
+  width: 100%;
+  max-width: 220px;
+  margin: auto;
+}
