--- a/style/style.css
+++ b/style/style.css
@@ -1,73 +1,38 @@
-.contenidor
-{
-  width: 100%;
-  display: flex;
-  justify-content: flex;
-  align-items: center;
-  height: 100hv;
-}
-
-.contenidor figure
-{
+.image-container {
   position: relative;
-  height: 250px;
-  width: 350px;
-  overflow: hidden;
-  border-radius: 6px;
-  box-shadow: 0px 15px 25px rgba(0,0,0.50);
-  cursor: pointer;
-}
-
-.contenidor figure img
-{
   width: 100%;
-  height: 100%;
-  transition: all 500ms ease-out;
+  max-width: 400px;
+  height: auto;
 }
 
-.contenidor figure .capa
-{
+.image-container img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.overlay {
   position: absolute;
-  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  overflow: hidden;
   width: 100%;
+  height: 0;
+  transition: .5s ease;
+}
+
+.image-container:hover .overlay {
   height: 100%;
-  background: rgba(11,103,123,.06);
-  transition: all 500ms ease-out;
-  opacity: 0;
-  visibility: hidden;
-  text-align: center;
 }
 
-.contenidor figure:hover > .capa
-{
-  opacity: 1;
-  visibility: visible;
-}
-
-.contenidor figure:hover > .capa h3
-{
-  margin-top: 70px;
-  margin-bottom: 15px;
-}
-.contenidor figure:hover > img
-{
-  transform: scale(1.3);
-}
-.contenidor figure .capa h3
-{
-  color: #fff;
-  font-weight: 400;
-  margin-bottom: 120px;
-  transition: all 500ms ease-out;
-  margin-top: 30px;
-}
-
-.contenidor figure .capa p
-{
-  color: #fff;
-  font-size: 15px;
-  line-height: 1.5;
-  width: 100%;
-  max-width: 220px;
-  margin: auto;
+.text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
 }
