--- a/style/style.css
+++ b/style/style.css
@@ -1,64 +1,33 @@
-.image-container {
+.image-wrapper {
   display: flex;
-  align-items: center;
-  justify-content: center;
+}
+
+.image-container {
   position: relative;
-  width: 100%;
-  max-width: 400px;
-  height: auto;
+  width: 50%;
 }
 
 .image-container img {
-  display: block;
   width: 100%;
   height: auto;
-  margin: 10px;
 }
 
-.overlay1 {
+.overlay {
   position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
   background-color: rgba(0, 0, 0, 0.5);
   overflow: hidden;
-  width: 100%;
   height: 0;
   transition: .5s ease;
 }
 
-.image-container:hover .overlay1 {
+.image-container:hover .overlay {
   height: 100%;
 }
 
-.text1 {
-  color: white;
-  font-size: 20px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-}
-
-
-.overlay2 {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-  overflow: hidden;
-  width: 100%;
-  height: 0;
-  transition: .5s ease;
-}
-
-.image-container:hover .overlay2 {
-  height: 100%;
-}
-
-.text2 {
+.text {
   color: white;
   font-size: 20px;
   position: absolute;
