--- a/style/style.css
+++ b/style/style.css
@@ -5,11 +5,17 @@
 .image-container {
   position: relative;
   width: 50%;
+  margin-right: 20px;
+}
+
+.image-container:last-child {
+  margin-right: 0;
 }
 
 .image-container img {
   width: 100%;
-  height: auto;
+  height: 100%;
+  object-fit: cover;
 }
 
 .overlay {
