--- a/style/style.css
+++ b/style/style.css
@@ -1,45 +1,53 @@
-.image-wrapper {
-  display: flex;
-}
-
-.image-container {
-  position: relative;
-  width: 50%;
-  margin-right: 20px;
-}
-
-.image-container:last-child {
-  margin-right: 0;
-}
-
-.image-container img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.overlay {
-  position: absolute;
-  bottom: 0;
+nav {
+  background-color: #333;
+  position: fixed;
+  top: 0;
   left: 0;
-  right: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+}
+
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
   overflow: hidden;
-  height: 0;
-  transition: .5s ease;
 }
 
-.image-container:hover .overlay {
-  height: 100%;
+nav li {
+  float: left;
+  position: relative;
 }
 
-.text {
+nav a {
+  display: block;
   color: white;
-  font-size: 20px;
   text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
+  padding: 14px 16px;
+  text-decoration: none;
 }
+
+nav a:hover {
+  background-color: #111;
+}
+
+nav ul ul {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+}
+
+nav ul li:hover > ul {
+  display: inherit;
+}
+
+nav ul ul li:hover > ul {
+  display: inherit;
+}
+
+nav ul ul ul {
+  position: absolute;
+  left: 100%;
+  top: 0;
+}
+
