--- a/style/style.css
+++ b/style/style.css
@@ -33,3 +33,19 @@ ul, ol
   position: absolute;
   min-width: 140px;
 }
+
+.nav li:hover > ul
+{
+  display: block;
+}
+
+.nav li ul li
+{
+  position: relative;
+}
+
+.nav li ul li ul
+{
+  right: -140px;
+  top: 0px;
+}
