--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,14 @@
-
+.nav
+{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #000;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
 ul, ol
 {
 list-style: none;
