--- a/style/style.css
+++ b/style/style.css
@@ -1,10 +1,10 @@
-table th td
+table, th, td
 {
   border: 1px solid blueviolet;
   border-collapse: collapse;
 }
 
-th td
+th, td
 {
   padding: 10px;
 }
