--- a/style/style.css
+++ b/style/style.css
@@ -1,50 +1,52 @@
-.slider-container
-{
+.slider {
+    position: relative;
     width: 100%;
+    height: 400px;
     overflow: hidden;
-}
-
-.slider-wrapper
-{
+  }
+  
+  .slider-images {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 400%;
+    height: 100%;
     display: flex;
-    width: 300%;
     transition: transform 0.5s ease;
-}
-
-.slider-container
-{
-    width: 33.33%;
-    padding: 50px;
-    box-sizing: border-box;
-}
-
-.slide:nth-child(1)
-{
-    background-color: red;
-}
-
-.slide:nth-child(2)
-{
-    background-color: green;
-}
-
-.slide:nth-child(3)
-{
-    background-color: blue;
-}
-
-.slider-wrapper.slide1 
-{
-    transform: translateX(0);
-}
+  }
   
-.slider-wrapper.slide2 
-{
-    transform: translateX(-33.33%);
-}
+  .slider-images img {
+    width: 25%;
+    height: 100%;
+    object-fit: cover;
+  }
   
-.slider-wrapper.slide3 
-{
-    transform: translateX(-66.66%);
-}
+  .slider-control {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 50px;
+    height: 50px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    font-size: 24px;
+    text-align: center;
+    line-height: 50px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .slider-control:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+  
+  .slider-control.left {
+    left: 0;
+  }
+  
+  .slider-control.right {
+    right: 0;
+  }
+  
+  
   
