--- a/style/style.css
+++ b/style/style.css
@@ -1,52 +1,9 @@
-.slider {
+.banner
+{
     position: relative;
     width: 100%;
-    height: 400px;
-    overflow: hidden;
-  }
-  
-  .slider-images {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 400%;
-    height: 100%;
-    display: flex;
-    transition: transform 0.5s ease;
-  }
-  
-  .slider-images img {
-    width: 25%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
-  .slider-control {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 50px;
-    height: 50px;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: #fff;
-    font-size: 24px;
-    text-align: center;
-    line-height: 50px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  .slider-control:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-  }
-  
-  .slider-control.left {
-    left: 0;
-  }
-  
-  .slider-control.right {
-    right: 0;
-  }
-  
+    height: calc(100vh - 50px);
+    background-color: blue;
+}
   
   
