--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,10 @@
     width: 100%;
     height: calc(100vh - 50px);
     background-color: blue;
+    background-size: cover;
+    background-position: center;
+    transition: all .1s ease-in-out;
+    background-image: url("https://ih1.redbubble.net/image.1317840388.0531/poster,840x830,f8f8f8-pad,1000x1000,f8f8f8.jpg");
 }
   
   
