--- a/style/style.css
+++ b/style/style.css
@@ -10,4 +10,17 @@
     background-image: url("https://ih1.redbubble.net/image.1317840388.0531/poster,840x830,f8f8f8-pad,1000x1000,f8f8f8.jpg");
 }
   
+.banner-container
+{
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    background-color: rgba(0, 22, 40, .6);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
   
