--- a/style/style.css
+++ b/style/style.css
@@ -23,4 +23,13 @@
     justify-content: center;
     align-items: center;
 }
+
+.banner-container h1
+{
+    margin: 0;
+    padding: 0;
+    padding-bottom: 30px;
+    font-size: 40px;
+    text-align: center;
+}
   
