--- a/style/style.css
+++ b/style/style.css
@@ -8,6 +8,7 @@
     background-position: center;
     transition: all .1s ease-in-out;
     background-image: url("https://ih1.redbubble.net/image.1317840388.0531/poster,840x830,f8f8f8-pad,1000x1000,f8f8f8.jpg");
+    animation: banner 28s infinite linear;
 }
   
 .banner-container
@@ -31,5 +32,40 @@
     padding-bottom: 30px;
     font-size: 40px;
     text-align: center;
+}
+
+@keyframes{
+    0%
+    {
+        background-image: url("");
+    }
+    25%
+    {
+        background-image: url("");
+    }
+    26%
+    {
+        background-image: url("");
+    }
+    50%
+    {
+        background-image: url("");
+    }
+    51%
+    {
+        background-image: url("");
+    }
+    75%
+    {
+        background-image: url("");
+    }
+    76%
+    {
+        background-image: url("");
+    }
+    100%
+    {
+        background-image: url("");
+    }
 }
   
