--- a/style/style.css
+++ b/style/style.css
@@ -102,4 +102,9 @@
     top: 0;
     height: 100%;
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+    
 }
