--- a/style/style.css
+++ b/style/style.css
@@ -1,43 +1,34 @@
 .carousel {
-    overflow: hidden;
     width: 100%;
+    overflow: hidden;
+    position: relative;
   }
   
-  .carousel-inner {
+  .slide-wrapper {
     display: flex;
     width: 400%;
-    animation: carousel-animation 10s infinite;
+    animation: slide 10s infinite;
   }
   
-  .carousel-inner img {
-    flex: 1;
-    margin: 0;
+  .slide-wrapper img {
+    width: 25%;
   }
   
-  @keyframes carousel-animation {
+  @keyframes slide {
     0% {
       transform: translateX(0%);
     }
     25% {
-      transform: translateX(0%);
-    }
-    30% {
       transform: translateX(-100%);
     }
-    55% {
-      transform: translateX(-100%);
-    }
-    60% {
+    50% {
       transform: translateX(-200%);
     }
-    85% {
-      transform: translateX(-200%);
-    }
-    90% {
+    75% {
       transform: translateX(-300%);
     }
     100% {
-      transform: translateX(-300%);
+      transform: translateX(0%);
     }
   }
   
