--- a/style/style.css
+++ b/style/style.css
@@ -1,14 +1,31 @@
 .container-slider
-{}
+{
+  width: 90%;
+  max-width: 900px;
+  margin: auto;
+  overflow: hidden;
+  box-shadow: 0 0 0 10px #fff, 0 15px 50px;
+  position: relative;
+}
 
 .slider
-{}
+{
+  display: flex;
+  width: 400px;
+  height: 400px;
+}
 
 .slider__section
-{}
+{
+  width: 100%;
+}
 
 .slider__img
-{}
+{
+  display: block;
+  width: 100%;
+  height: 100%;
+}
 
 .slider__btn
 {}
