--- a/style/style.css
+++ b/style/style.css
@@ -34,6 +34,14 @@
   height: 40px;
   background: rgba(255,255,255,0.7);
   top: 50%;
+  transform: translateY(-50%);
+  font-size: 30px;
+  font-weight: bold;
+  font-family: monospace;
+  text-align: center;
+  border-radius: 50%;
+  cursor: pointer;
+
 }
 
 .slider__btn:hover
@@ -43,4 +51,6 @@
 {}
 
 .slider__btn--right
-{}
+{
+  right: 10px;
+}
