--- a/style/style.css
+++ b/style/style.css
@@ -1,44 +1,62 @@
-.slider {
-  position: relative;
+.container-slider
+{
+  width: 90%;
+  max-width: 900px;
+  margin: auto;
   overflow: hidden;
+  box-shadow: 0 0 0 10px #fff, 0 15px 50px;
+  position: relative;
 }
 
-.slides {
+.slider
+{
   display: flex;
-  width: 100%;
-  transition: transform 0.5s ease-in-out;
+  width: 400px;
+  height: 400px;
+  margin-left: -100%;
 }
 
-.slides img {
+.slider__section
+{
   width: 100%;
 }
 
-.prev,
-.next {
+.slider__img
+{
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.slider__btn
+{
   position: absolute;
+  width: 40px;
+  height: 40px;
+  background: rgba(255,255,255,0.7);
   top: 50%;
   transform: translateY(-50%);
-  cursor: pointer;
   font-size: 30px;
   font-weight: bold;
-  color: white;
+  font-family: monospace;
+  text-align: center;
+  border-radius: 50%;
+  cursor: pointer;
+
 }
 
-.prev {
-  left: 0;
+.slider__btn:hover
+{
+  background: #fff ;
 }
 
-.next {
-  right: 0;
+.slider__btn--left
+{
+  left: 10px;
 }
 
-/* Estilos para la clase activa */
-.active {
-  opacity: 1;
-}
-
-/* Oculta todas las diapositivas excepto la activa */
-.slides img:not(.active) {
-  opacity: 0;
-  transition: opacity 0.5s;
+.slider__btn--right
+{
+  right: 10px;
 }
