--- a/style/style.css
+++ b/style/style.css
@@ -8,9 +8,9 @@ body
   align-items: center;
   background-color: #1e1e1e;
 }
-.slidder
+.slider
 {
-  width: 100px;
+  width: 1000px;
   height: 500px;
   border-radius: 15px;
   overflow: hidden;
@@ -24,4 +24,14 @@ body
 .slides input
 {
   display: none;
+}
+.slide
+{
+  width: 20%;
+  transition: 2s;
+}
+.slide img
+{
+  width: 1000px;
+  height: 500px;
 }
