--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,14 @@
-body
+/*body
+{
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #1e1e1e;
+}*/
+.sliderPrime
 {
   margin: 0;
   padding: 0;
