--- a/style/style.css
+++ b/style/style.css
@@ -1,27 +1,130 @@
-#pantallaEspera {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(255, 255, 255, 0.8);
-  z-index: 9999;
-  display: none;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-.spinner {
-  margin: 20% auto;
-  width: 50px;
-  height: 50px;
-  position: relative;
-  border: 3px solid rgba(0, 0, 0, 0.1);
-  border-top-color: #000;
-  border-radius: 50%;
-  animation: girar 1s infinite linear;
+header {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	background-color: #333;
 }
 
-@keyframes girar {
-  to {
-    transform: rotate(360deg);
-  }
+nav {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 50px;
+}
+
+nav ul {
+display: flex;
+list-style: none;
+}
+
+nav ul li {
+margin: 0 10px;
+}
+
+nav ul li a {
+color: #fff;
+text-decoration: none;
+padding: 10px;
+}
+
+main {
+margin-top: 50px;
+}
+
+#slider {
+height: 500px;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+background-color: #ccc;
+}
+
+.slider-container {
+display: flex;
+flex-direction: row;
+width: 100%;
+height: 100%;
+overflow: hidden;
+}
+
+.slider-item {
+flex: 1;
+height: 100%;
+display: flex;
+align-items: center;
+justify-content: center;
+}
+
+.slider-item img {
+max-width: 100%;
+max-height: 100%;
+object-fit: contain;
+}
+
+.slider-controls {
+margin-top: 20px;
+}
+
+.slider-button {
+margin: 0 10px;
+}
+
+#photos {
+display: flex;
+flex-direction: row;
+align-items: center;
+justify-content: center;
+background-color: #fff;
+height: 300px;
+}
+
+.photos-container {
+display: flex;
+flex-direction: row;
+align-items: center;
+justify-content: center;
+height: 100%;
+}
+
+.photo-item {
+width: 20%;
+margin: 0 10px;
+transition: transform 0.5s;
+}
+
+.photo-item:hover {
+transform: scale(1.1);
+}
+
+#contact {
+background-color: #eee;
+padding: 50px;
+}
+
+#contact ul {
+list-style: none;
+margin-bottom: 20px;
+}
+
+.social-media {
+display: flex;
+list-style: none;
+}
+
+.social-media li {
+margin-right: 10px;
+}
+
+.social-media img {
+width: 30px;
+height: 30px;
+object-fit: contain;
 }
