--- a/style/style.css
+++ b/style/style.css
@@ -79,56 +79,40 @@ margin: 0 10px;
 
 
 /*-----------------------------------------------------------------------------*/
-#photos {
-display: flex;
-flex-direction: row;
-align-items: center;
-justify-content: center;
-background-color: #fff;
-height: 300px;
-}
-
-.photos-container {
-display: flex;
-flex-direction: row;
-align-items: center;
-justify-content: center;
-height: 100%;
-}
-
-.photo-item {
-width: 20%;
-margin: 0 10px;
-transition: transform 0.5s;
-}
-/*---------------------------------------------------------------------------------*/
-
-
-.photo-item:hover {
-transform: scale(1.1);
-}
-
-#contact {
-background-color: #eee;
-padding: 50px;
-}
-
-#contact ul {
-list-style: none;
-margin-bottom: 20px;
-}
-
-.social-media {
-display: flex;
-list-style: none;
-}
-
-.social-media li {
-margin-right: 10px;
-}
-
-.social-media img {
-width: 30px;
-height: 30px;
-object-fit: contain;
-}
+.imagen {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+  }
+  
+  .imagen img {
+	max-width: 100%;
+	height: auto;
+  }
+  
+  .overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.7);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	opacity: 0;
+	transition: opacity 0.5s ease;
+  }
+  
+  .overlay p {
+	color: #fff;
+	font-size: 2rem;
+	text-align: center;
+	margin: 0;
+	padding: 1rem;
+  }
+  
+  .imagen img:hover + .overlay {
+	opacity: 1;
+  }
+  
