--- a/style/style.css
+++ b/style/style.css
@@ -76,43 +76,57 @@ margin-top: 20px;
 .slider-button {
 margin: 0 10px;
 }
-
-
 /*-----------------------------------------------------------------------------*/
-.imagen {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+.image-wrapper
+  {
+    display: flex;
   }
   
-  .imagen img {
-	max-width: 100%;
-	height: auto;
+  .image-container 
+  {
+    position: relative;
+    width: 50%;
+    margin-right: 20px;
   }
   
-  .overlay {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(0, 0, 0, 0.7);
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	opacity: 0;
-	transition: opacity 0.5s ease;
+  .image-container:last-child 
+  {
+    margin-right: 0;
   }
   
-  .overlay p {
-	color: #fff;
-	font-size: 2rem;
-	text-align: center;
-	margin: 0;
-	padding: 1rem;
+  .image-container img 
+  {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
   
-  .imagen img:hover + .overlay {
-	opacity: 1;
+  .overlay 
+  {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    overflow: hidden;
+    height: 0;
+    transition: .5s ease;
+  }
+  
+  .image-container:hover .overlay 
+  {
+    height: 100%;
+  }
+  
+  .text 
+  {
+    color: white;
+    font-size: 20px;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
   }
   
