--- a/style/style.css
+++ b/style/style.css
@@ -135,4 +135,20 @@ margin: 0 10px;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
   }
+
+
+
+
+
+  #pantallaEspera {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: rgba(255, 255, 255, 0.8);
+	z-index: 9999;
+	display: none;
+  }
+  
   
