--- a/style/style.css
+++ b/style/style.css
@@ -1,154 +1,57 @@
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+.nav
+{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #000;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  z-index: 9999;
 }
-
-header {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	background-color: #333;
-}
-
-nav {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 50px;
-}
-
-nav ul {
-display: flex;
+ul, ol
+{
 list-style: none;
 }
 
-nav ul li {
-margin: 0 10px;
-}
-
-nav ul li a {
+.nav li a
+{
+background-color: #000;
 color: #fff;
 text-decoration: none;
-padding: 10px;
+padding: 10px 15px;
+display: block;
 }
-
-main {
-margin-top: 50px;
-}
-
-#slider {
-height: 500px;
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: center;
-background-color: #ccc;
-}
-
-.slider-container {
-display: flex;
-flex-direction: row;
-width: 100%;
-height: 100%;
-overflow: hidden;
-}
-
-.slider-item {
-flex: 1;
-height: 100%;
-display: flex;
-align-items: center;
-justify-content: center;
-}
-
-.slider-item img {
-max-width: 100%;
-max-height: 100%;
-object-fit: contain;
-}
-
-.slider-controls {
-margin-top: 20px;
-}
-
-.slider-button {
-margin: 0 10px;
-}
-/*-----------------------------------------------------------------------------*/
-.image-section
+.nav li a:hover
 {
-  height: 500px;
-  display: flex;
-  background-color: #ccc;
+background-color: #434343;
 }
-.image-wrapper
-  {
-    display: flex;
-  }
-  
-  .image-container 
-  {
-    position: relative;
-    width: 50%;
-    margin-right: 20px;
-  }
-  
-  .image-container:last-child 
-  {
-    margin-right: 0;
-  }
-  
-  .image-container img 
-  {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
-  .overlay 
-  {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    overflow: hidden;
-    height: 0;
-    transition: .5s ease;
-  }
-  
-  .image-container:hover .overlay 
-  {
-    height: 100%;
-  }
-  
-  .text 
-  {
-    color: white;
-    font-size: 20px;
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-  }
 
+.nav > li
+{
+float: left;
+}
 
+.nav li ul
+{
+display: none;
+position: absolute;
+min-width: 140px;
+}
 
+.nav li:hover > ul
+{
+display: block;
+}
 
+.nav li ul li
+{
+position: relative;
+}
 
-  #pantallaEspera {
-	position: fixed;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	background-color: rgba(255, 255, 255, 0.8);
-	z-index: 9999;
-	display: none;
-  }
-  
-  
+.nav li ul li ul
+{
+right: -140px;
+top: 0px;
+} 
