--- a/style/style.css
+++ b/style/style.css
@@ -55,3 +55,27 @@ position: relative;
 right: -140px;
 top: 0px;
 } 
+
+
+
+
+p, 
+ul {
+  border: 2px solid rebeccapurple;
+  padding: .5em;
+}
+
+.block,
+li {
+  border: 2px solid blue;
+  padding: .5em;
+}
+
+ul {
+  display: flex;
+  list-style: none;
+}
+
+.block {
+  display: block;
+}
