--- a/style/style.css
+++ b/style/style.css
@@ -89,3 +89,12 @@ ul {
   border: 1px solid #ccc;
   padding: 10px;
 }
+
+
+
+.caja1 {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #ccc;
+  padding: 10px;
+}
