--- a/style/style.css
+++ b/style/style.css
@@ -1,124 +1,89 @@
-.nav
-{
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: #000;
+body{
+  background-color: #D9EAEC;
+  font-family: "Open Sans", sans-serif;
+
+}
+
+img{                      /*Mides de les imatges*/
+height: 300px;
+width: 400px;
+}
+
+
+a{
+text-decoration: none;
+}
+
+.textimg{
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  font-size: 16px;
+}
+
+
+.textimg2{
+  position: absolute;
+  top: 50%;
+  margin-top: -178px;
+  left: 50%;
+  margin-left: -10px;;
+  transform: translate(-50%, -50%);
+  color: rgb(20, 220, 234);
+}
+
+
+nav {
+  background-color: #2980b9; /* color de fons del menú */
+}
+
+nav ul {
+  list-style: none;
   margin: 0;
   padding: 0;
-  list-style: none;
-  z-index: 9999;
-}
-ul, ol
-{
-list-style: none;
-}
-
-.nav li a
-{
-background-color: #000;
-color: #fff;
-text-decoration: none;
-padding: 10px 92px;
-display: block;
-}
-.nav li a:hover
-{
-background-color: #434343;
-}
-
-.nav > li
-{
-float: left;
-}
-
-.nav li ul
-{
-display: none;
-position: absolute;
-min-width: 140px;
-}
-
-.nav li:hover > ul
-{
-display: block;
-}
-
-.nav li ul li
-{
-position: relative;
-}
-
-.nav li ul li ul
-{
-right: -140px;
-top: 0px;
-} 
-
-
-
-
-p, 
-ul {
-  border: 2px solid rebeccapurple;
-  padding: .5em;
-}
-
-.block,
-li {
-  border: 2px solid blue;
-  padding: .5em;
-}
-
-ul {
   display: flex;
-  list-style: none;
 }
 
-.block {
+nav li {
+  margin-right: 20px;
+  font-size: 16px;
+}
+
+nav a {
   display: block;
+  padding: 18px 20px;
+  color: #fff;
+  text-decoration: none;
 }
 
-
-
-
-.caja {
-  display: flex;
-  flex-wrap: nowrap;
-  border: 1px solid #ccc;
-  padding: 10px;
+nav a:hover {
+  background-color: #2c3e50; /* color hover */
 }
 
-
-
-.caja1 {
-  display: flex;
-  flex-direction: column;
-  border: 1px solid #ccc;
-  padding: 10px;
+nav a:active {
+  background-color: #3498db; /* color active */
 }
 
+nav ul ul {
+  display: none;
+  position: absolute;
+  background-color: #2980b9; /* color de fons dels subapartats */
+}
 
-
-.contenedor {
+nav ul li:hover > ul {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
 }
 
-img {
-  max-width: 100%;
-  height: auto;
+nav ul ul li {
+  margin: 0;
+  width: 200px;
 }
 
-.caja2 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-size: 20px;
-  writing-mode: vertical-rl;
-  text-orientation: upright;
+nav ul ul a {
+  padding: 10px 20px;
+}
+
+nav ul ul a:hover {
+  background-color: #2c3e50; /* color hover dels subapartats */
 }
